fix(sideMenu): increase collapsed group spacing

--- a/src/components/SideMenu/menu.less
+++ b/src/components/SideMenu/menu.less
@@ -104,6 +104,10 @@
   font-size: 14px;
 }
 
+.side-menu-collapsed-section-divider-wrap {
+  display: flow-root;
+}
+
 .side-menu-collapsed-section-divider {
   height: 1px;
   margin: 8px 8px;
